--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,24 @@
 services:
+  go-user-api:
+    build: .
+    image: go-user-api:latest
+    container_name: go-user-api
+    restart: always
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mysql
+    deploy:
+      resources:
+        reservations:
+          cpus: "0.1"
+          memory: "128M"
+        limits:
+          cpus: "0.2"
+          memory: "256M"
+    networks:
+      - mynet
+
   mysql:
     image: mysql:latest
     container_name: mysql
@@ -11,8 +31,14 @@ services:
     deploy:
       resources:
         reservations:
-          cpus: "0.25"
+          cpus: "0.1"
           memory: "128M"
         limits:
-          cpus: "0.5"
+          cpus: "0.2"
           memory: "256M"
+    networks:
+      - mynet
+
+networks:
+  mynet:
+    driver: "bridge"
