--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
         "prefork": true
     },
     "mysql": {
-        "dsn": "root:root@tcp(127.0.0.1:3306)/go_user_api?charset=utf8mb4&parseTime=True&loc=Local",
+        "dsn": "root:@tcp(127.0.0.1:3306)/go_user_api?charset=utf8mb4&parseTime=True&loc=Local",
         "max_idle_conns": 10,
         "max_open_conns": 100,
         "conn_max_idletime": 5,
