--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,10 @@
+volumes:
+  mysql_data:
+
+networks:
+  mynet:
+    driver: bridge
+
 services:
   go-user-api:
     build: .
@@ -8,6 +15,8 @@ services:
       - "3000:3000"
     depends_on:
       - mysql
+    networks:
+      - mynet
     deploy:
       resources:
         reservations:
@@ -16,8 +25,6 @@ services:
         limits:
           cpus: "0.2"
           memory: "256M"
-    networks:
-      - mynet
 
   mysql:
     image: mysql:latest
@@ -28,6 +35,10 @@ services:
       MYSQL_DATABASE: go_user_api
     ports:
       - "3306:3306"
+    networks:
+      - mynet
+    volumes:
+      - mysql_data:/var/lib/mysql
     deploy:
       resources:
         reservations:
@@ -36,9 +47,3 @@ services:
         limits:
           cpus: "0.2"
           memory: "256M"
-    networks:
-      - mynet
-
-networks:
-  mynet:
-    driver: "bridge"
